fixed white space

--- a/stylesheets/blog-stylesheets.css
+++ b/stylesheets/blog-stylesheets.css
@@ -70,7 +70,7 @@ ul {
 }
 
 li {
-	white-space: pre-line;
+	white-space: pre;
 }
 
 }
